--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <h1 id="author" class="mt-5" style="text-decoration: underline;">Notable Chefs</h1>
     <div class="row mt-4">
         <!-- Card 1 -->
-        <div class="col-md-4">
+        <div id="cards" class="col-md-4">
             <div class="card">
                 <img src="bobby flay.jfif" class="card-img-top" alt="Super-Foods">
                 <div class="card-body">
@@ -33,7 +33,7 @@
         </div>
     
         <!-- Card 2 -->
-        <div class="col-md-4">
+        <div id="cards" class="col-md-4">
             <div class="card">
                 <img src="nick digiovanni.jfif" class="card-img-top" alt="Pastries">
                 <div class="card-body">
@@ -47,7 +47,7 @@
         </div>
     
         <!-- Card 3 -->
-        <div class="col-md-4">
+        <div id="cards" class="col-md-4">
             <div class="card">
                 <img src="guy fieri.jfif" class="card-img-top" alt="Salad Ideas">
                 <div class="card-body">
