--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <img id="contactimg"  style="height: 100px;"  src="The Food Article logo.png" alt="">
     <p style="text-align: center;">Contact us if you have any questions or feedback. We are here to help!</p>
         <img id="gmail" style="height: 30px;" src="gmaillogo.png" alt="">
-        <a id="email" href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHvnnrkzXjKqtzZcsvfhNrrqwJBtDTVVLmpnFFqmZgSlppWXQBZKSBVxzjPrsgClnTZRsNw">Gmail</a>
+        <a id="email" href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHvnnrkzXjKqtzZcsvfhNrrqwJBtDTVVLmpnFFqmZgSlppWXQBZKSBVxzjPrsgClnTZRsNw">Gmail:</a> jordankanyelu@gmail.com
         <br><br>
         <img id="phone" style="height: 30px;" src="phonelogo.png" alt="">
         <a href="phone.html">Phone</a>
