--- a/options.html
+++ b/options.html
@@ -101,8 +101,9 @@
                                 <h5 class="card-title">Pastries</h5>
                                 <p class="card-text">Explore a variety of delicious pastries from around the world and
                                     learn their history.</p>
-                                <a href="https://www.pastryisart.com/most-popular-types-of-pastries"
+                                <a href="https://www.tasteatlas.com/pastry"
                                     class="btn btn-primary">Learn More</a>
+                                    <a href="https://www.cordonbleu.edu/malaysia/blog-the-top-8-pastry-wonders-of-the-world-delicious-pastries-to-try/en" class="btn btn-primary">Learn More!</a>
                             </div>
                         </div>
                     </div>
