--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <body id="body1">
                 <div class="col-9 col-md-10 p-4 main-content">
                     <h1>The Food Article</h1>
+                    <img id="logo" style="height: 100px;" src="The Food Article logo.png" alt="">
                     <p id="a"><strong><i>Welcome to The Food Article
                     Your ultimate destination for all things food! From local delicacies to global flavors, we bring you delicious recipes,
                     culinary tips, and food stories that inspire your kitchen adventures. Whether you’re a home cook, a foodie, or just
