--- a/recipes.html
+++ b/recipes.html
@@ -35,6 +35,15 @@
     <img id="img" style="height: 100px;" src="The Food Article logo.png" alt="">
     <p id="p-1">Welcome to the recipes section!  If interested in learning how to cook your favorite dishes here is for you!</p>
     <h4 class="mt-5" style="text-decoration: underline ;text-align: center;">Popular Pastries</h4>
+    <iframe id="vid" width="645" height="363" src="https://www.youtube.com/embed/u-vE8PPv5SA"
+        title="Tasty&#39;s Most Popular Dessert Recipes" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <h4 class="mt-5" style="text-decoration: underline ;text-align: center;">Local dishes</h4>
+        <iframe id="vid"  width="645" height="363" src="https://www.youtube.com/embed/8IUZ7-KYl24"
+            title="Ranking the Top 10 Nigerian Foods Plus How to Make Each One" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     
 
